<resources>
    <string name="facebook_app_id" translatable="false">990855437627828</string>
    <string name="app_name">MappingBird</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="get_start">Get Started</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">LOG OUT</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="get_direction">Get Direction</string>
    <string name="login_description">Log into your MappingBird account to view the places you\'ve saved on www.mappingbird.com.</string>
    <string name="no_data">No Data</string>
    <string name="loading">Loading...</string>
    <string name="my_loaction">My Location</string>
    <string name="data_incomplete">The data is incomplete!</string>
    <string name="ok">OK</string>
    <string name="or">OR</string>
    <string name="str_retry">Retry</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_conitune">Conitune</string>
    <string name="str_cancel_upload">Cancel upload</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_on">On</string>
    <string name="str_abort">abort</string>
    <string name="str_set_up">Set up</string>
    <string name="str_update">Update</string>
    <string name="login_content_title">Log In MappingBird Account</string>
    <string name="login_content">Once you log in your account, you can view all your saved places on MappingBird.</string>
    <string name="login_hint_email">Enter your Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_btn">LOG IN</string>
    <string name="login_logging">LOGGING IN</string>
    <string name="sign_up_detail">Sign up a MappingBird account for backing up your favorite
        places, sync with other devices and access them on mappingbird.com</string>
    <string name="sign_up_detail_link">
		<![CDATA[
        Sign up a MappingBird account for backing up your favorite
        places, sync with other devices and access them on  
        <font color=#01A9E7><a href="https://mappingbird.com/">www.mappingbird.com</a></font>
        ]]>
    </string>
    <string name="forgot_password_title">Reset password email sent!</string>
    <string name="forgot_password_message">An email about how to reset your password has been sent to %1$s</string>
    <string name="forgot_password_enter_email_title">Enter your email</string>
    <string name="forgot_password_text">Forgot password</string>
    <string name="tutorial_swipe_to_learn">Swipe to learn more</string>
    <string name="tutorial_welocome_message_favorite_in_pockets">Your favorite places, restaurants, shops, and bars all in your pockets.</string>
    <string name="tutorial_already_have_account">Already have a account?</string>
    <string name="tutorial_sign_in">LOG IN</string>
    <string name="tutorial_sign_up">SIGN UP</string>
    <string name="tutorial_page1_scenario_intro">When you come across a nice place, save it to MappingBird.</string>
    <string name="tutorial_page2_scenario_intro">Look for a great bar to have fun with friends? Check your MappingBird collection.</string>
    <string name="tutorial_page3_scenario_intro">Go on a big trip? Plan it on your computer. View it on your phone.</string>
    <string name="tutorial_sign_up_title">Remember places for later.</string>
    <string name="tutorial_sign_up_descriptions">Sign in a MappingBird account to sync your collections which you have saved from your computer.</string>
    <string name="tutorial_create_account">CREATE A FREE ACCOUNT</string>
    <string name="tutorial_do_it_later">Do It Later</string>
    <string name="tutorial_learn_more">Learn more</string>
    <string name="tutorial_welcome">Welcome</string>
    <string name="dialog_sign_out_title">Sign out!</string>
    <string name="dialog_sign_out_description">Signing out will remove all your cached files from your device. Do you want to sign out?</string>
    <string name="dialog_location_hint_title">Turn on Location works better</string>
    <string name="dialog_location_hint_content">It helps to improve location accuracy and display your current location on the map.</string>
    <string name="dialog_location">Location</string>
    <string name="dialog_create_collection_title">Create new collection</string>
    <string name="dialog_create_collection_hint">Enter collection name</string>
    <string name="collection_dialog_cancel_upload_photos_title">Uploading photos</string>
    <string name="collection_dialog_cancel_upload_photos_message">New place has saved. Now is uploading photos.
        Do you want to cancel upload?</string>
    <string name="collection_dialog_successed_upload_title">\"%1$s\" saved</string>
    <string name="collection_dialog_successed_upload_msg">New place has been successfully saved to \"%1$s\"</string>
    <string name="collection_dialog_btn_check_it_now">Check it now</string>
    <string name="collection_locationg_hint">Locating your current position, wait for a few moment</string>
    <string name="distance_less_one_meter">&#060;1</string>
    <string name="distance_meter">M</string>
    <string name="distance_kilometer">KM</string>
    <string name="distance_max_kilometer">+KM</string>
    <string name="aph_kind_landscape">Landscape</string>
    <string name="aph_kind_restaurant">Restaurant</string>
    <string name="aph_kind_shopping">Shopping</string>
    <string name="aph_kind_hotel">Hotel</string>
    <string name="aph_kind_bar">Bar</string>
    <string name="aph_kind_pin">Pin</string>
    <string name="add_place_pick_category">Pick a category for the place you are going to save.</string>
    <string name="add_place_save">Save</string>
    <string name="add_place_create">Create</string>
    <string name="add_place_new_collection">Create a new collection</string>
    <string name="add_place_about_place">What about this place...</string>
    <string name="add_place_add_tags">Add tags</string>
    <string name="add_place_location_name">Enter location name</string>
    <string name="add_place_address">Add address</string>
    <string name="add_place_add_phone">Add phone</string>
    <string name="add_place_add_open_time">Add open time</string>
    <string name="add_place_add_link">Add hyperlink</string>
    <string name="add_place_add_field">Add another field</string>
    <string name="add_place_field_phone">Phone number</string>
    <string name="add_place_field_open_time">Open time</string>
    <string name="add_place_field_hyperlink">Hyperlink</string>
    <string name="add_place_create_new">Create new...</string>
    <string name="add_place_add_tag_title">Add new or choose tags</string>
    <string name="add_place_current_location_hint_title">The place will be public</string>
    <string name="add_place_current_location_hint_message">The place where you create will be shared with all MappingBird Users.
	    You will not able not modify if after it\'s created.</string>
	<string name="add_place_toast_more_then_ten">Cannot load more then 10 photo(s)</string>
    <string name="pick_place_title">Remember a place</string>
    <string name="pick_place_new_location">Add a new location</string>
    <string name="pick_place_add_create_location_title_by_text">Add%s</string>
    <string name="pick_place_add_create_location_title">Create a new location</string>
    <string name="pick_place_add_create_location_des">Create a new location for everyone</string>
    <string name="pick_place_add_create_location_title_no_filter_str">Add current location</string>
    <string name="pick_place_add_serach_title">Search%s</string>
    <string name="pick_place_add_srarch_des">Search more places nearby</string>
    <string name="pick_place_error_no_suggest">There are no suggested places around. Try to search or create new one</string>
    <string name="pick_place_error_no_search_result">No search result. Try other keyword or create new place</string>
    <string name="pick_place_error_title">Oops! There are some problems.</string>
    <string name="pick_place_error_refresh">tap to refresh!</string>
    <string name="place_businees_closed">Closed</string>
    <string name="place_last_update">Last edit - %s</string>
    <string name="place_delete_msg">Are you sure you want to delete this place?</string>
    <string name="create_location_title">Locating a new place</string>
    <string name="create_location_title_with_text">Locating %s</string>
    <string name="create_location_dialog_title_mean">Do you mean?</string>
    <string name="settings_about_title">About MappingBird</string>
    <string name="settings_about_subtitle">Version : %s</string>
    <string name="str_question">Help &#038; feedback</string>
    <string name="str_settings">Settings</string>
    <string name="str_log_out">Log out</string>
    <string name="str_take_picture">Take picture</string>
    <string name="error_normal_title">Oops!</string>
    <string name="error_location_title">Location Error</string>
    <string name="error_location_message">Your current location cannot be detected. If the problem persists, please feedback to us or email to feedback@mappingbird.com.</string>
    <string name="error_internal_title">Internal Error</string>
    <string name="error_internal_message">Please try again later. If the problem persists, please contact us by feedback@mappingbird.com.</string>
    <string name="error_unknow_title">Unknow Error</string>
    <string name="error_unknow_message">Please try again later. If the problem persists, please contact us by feedback@mappingbird.com.</string>
    <string name="error_log_out_fail">Fail to log out!</string>
    <string name="error_network_title">Network Error</string>
    <string name="error_network_message">Please connect to the Internet to sync your saved places on MappingBird.com.</string>
    <string name="error_login_fail_network">Please connect to the Internet and log in again.</string>
    <string name="error_login_fail_accout">Email or Password Error.</string>
    <string name="error_sign_up_fail_password_not_match_message">These passwords don\'t match. Try again?</string>
    <string name="error_search_place_error">Oops! There are some problems. Try to search or tap to refresh</string>
    <string name="error_search_place_hint">Otherwise you can...</string>
    <string name="error_dialog_submit_place_failed_title">Save place failed</string>
    <string name="error_dialog_submit_place_failed_message">Check your intent connection and retry</string>
    <string name="error_dialog_upload_images_failed_title">Photos upload failed</string>
    <string name="error_dialog_upload_images_failed_message">New place has saved, but something went wrong with uploading photos.</string>
    <string name="error_network_error_try_again_later">Please connect to the Internet and try again later</string>
    <string name="noti_update_wait_title">Waiting for saving</string>
    <string name="noti_update_wait_message">Please be patient</string>
    <string name="noti_update_error_photos_title">Upload photos failed</string>
    <string name="noti_update_error_place_title">Save place failed</string>
    <string name="noti_update_error_upload_title">Upload failed</string>
    <string name="noti_update_error_save_title">Save failed</string>
    <string name="noti_update_error_title">Update fails</string>
    <string name="noti_update_error_message">Tap for options</string>
    <string name="noti_update_tap_to_retry">Tap for options</string>
    <string name="noti_update_progress_title">Uploading photos:%1$s of %2$s</string>
    <string name="noti_update_progress_message">Tap to cancel</string>
    <string name="noti_update_finish_title">\"%1$s\" saved</string>
    <string name="debug_dump_db">Dump DB</string>
    <string name="debug_update_item">Update item</string>
</resources>