<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/graphic_orange" >

        <com.mpbd.widget.MappingbirdFontIcon
            android:id="@+id/back_icon"
            style="@style/TitleButtonStyle"
            android:text="@string/iconfont_arrow_left" />

        <com.mpbd.widget.MappingbirdTextView
            android:id="@+id/login_title_name"
            android:paddingLeft="4dp"
            style="@style/TextStyle_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/back_icon"
            android:text="@string/tutorial_sign_up"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/login_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_title" >

        <LinearLayout
            android:id="@+id/login_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="20dp" >

            <com.mpbd.widget.MappingbirdTextView
                android:id="@+id/sign_up_detail_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_detail"
                android:textColor="@color/font_normal"
                android:textSize="14dp" />

            <com.mpbd.widget.MappingbirdEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="#00000000"
                android:gravity="center_vertical"
                android:hint="@string/login_hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/font_dark"
                android:textColorHint="@color/font_hint"
                android:textSize="16dp" />

            <View
                android:id="@+id/field_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#DDDDDD" />

            <com.mpbd.widget.MappingbirdEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#00000000"
                android:gravity="center_vertical"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:textColor="@color/font_dark"
                android:textColorHint="@color/font_hint"
                android:textSize="16dp" />

            <View
                android:id="@+id/field_divider_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#DDDDDD" />

            <com.mpbd.widget.MappingbirdEditText
                android:id="@+id/confirm_input_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#00000000"
                android:gravity="center_vertical"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/font_dark"
                android:textColorHint="@color/font_hint"
                android:textSize="16dp" />

            <RelativeLayout
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/login_btn_selector_bg" >

                <com.mpbd.widget.MappingbirdTextView
                    android:id="@+id/login_loading_text"
                    style="@style/TextStyle_Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/tutorial_sign_up"
                    android:textAllCaps="true"
                    android:textColor="@color/login_btn_text_color"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>