<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/settings_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/title_bar_background" >

        <com.mappingbird.widget.MappingbirdFontIcon
            android:id="@+id/back_icon"
            style="@style/TitleButtonStyle"
            android:layout_alignParentLeft="true"
            android:text="@string/iconfont_arrow_left" />

        <com.mappingbird.widget.MappingbirdTextView
            android:id="@+id/trip_detail_title_name"
            style="@style/TextStyle_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/back_icon"
            android:singleLine="true"
            android:paddingLeft="4dp"
            android:text="@string/str_settings"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_log_out_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/collection_item_bg" >

        <com.mappingbird.widget.MappingbirdFontIcon
            android:id="@+id/settings_log_out_icon"
            style="@style/TitleButtonStyle"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/iconfont_logout"
            android:textColor="@color/iconfont_leading" />

        <com.mappingbird.widget.MappingbirdTextView
            android:id="@+id/ettings_log_out_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="4dp"
            android:layout_toRightOf="@id/settings_log_out_icon"
            android:paddingRight="16dp"
            android:text="@string/str_log_out"
            android:textColor="@color/font_normal"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/default_divider" />

    <LinearLayout
        android:id="@+id/settings_about_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:background="@drawable/collection_item_bg"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <com.mappingbird.widget.MappingbirdTextView
            android:id="@+id/settings_about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_about_title"
            android:textColor="@color/font_normal"
            android:textSize="16sp" />

        <com.mappingbird.widget.MappingbirdTextView
            android:id="@+id/settings_about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_settings"
            android:textColor="@color/font_hint"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/default_divider" />

    <RelativeLayout
        android:id="@+id/settings_dump_db_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/collection_item_bg"
        android:visibility="gone" >

        <com.mappingbird.widget.MappingbirdTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/debug_dump_db"
            android:textColor="@color/font_normal"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/default_divider" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_submit_data_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/collection_item_bg"
        android:visibility="gone" >

        <com.mappingbird.widget.MappingbirdTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/debug_update_item"
            android:textColor="@color/font_normal"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/default_divider" />
    </RelativeLayout>

</LinearLayout>